# dev-orchestrator

./: .env.example  .gitignore  README.md  pyproject.toml
runs/: README.md
src/dev_orchestrator/: __init__.py  cli.py
src/dev_orchestrator/agents/: __init__.py  agent_executor.py  architect_agent.py  base_agent.py  documenter_agent.py  implementer_agent.py  reviewer_agent.py  tester_agent.py  workflow.py
src/dev_orchestrator/core/: __init__.py  config.py  executor.py  git_ops.py  llm_config.py  planner.py  run_context.py
src/dev_orchestrator/core/roles/: __init__.py  architect.py  base.py  documenter.py  implementer.py  tester.py
templates/: pr_description.md  run_report.md  task_plan.json
tests/: __init__.py  test_git_ops.py  test_planner.py  test_run_context.py
